Changes z-index for .things to auto and fixes #68

--- a/css/linkflair.css
+++ b/css/linkflair.css
@@ -6,6 +6,18 @@
 /* The Linkflair Classes */
 
 
+#siteTable .thing.linkflair-bluepost .domain, #siteTable .thing.linkflair-bluepost .domain a, #siteTable .thing.linkflair-bluepost .tagline { color: #888877; }
+
+#siteTable .thing.linkflair-bluepost .entry .buttons li a { color: #888877; font-weight: bold; }
+
+#siteTable .thing.linkflair-bluepost {
+  background: url('../images/thread-background-transparent.png') repeat-x #022642 !important;
+  color: #00B4FF !important;
+}
+
+#siteTable .thing.linkflair-bluepost .title {
+  color: #00B4FF !important;
+}
 #siteTable .thing.linkflair-modpost a {
   color:#07D97F;
 }
@@ -20,7 +32,7 @@
   color:#cdc;
   }
 #siteTable .thing.linkflair-awesomepost {
-  background: url('../images/thread-background-transparent.png') repeat-x #37190e;
+  background: url('../images/thread-background-transparent.png') repeat-x #571700;
   }
 
 .linkflairlabel { display: none; }
@@ -85,16 +97,3 @@ a.thumbnail.default, a.thumbnail.self { background-position: -0px -1140px !impor
 /* NSFW goes at the end because it will always override linkflair */
 a.thumbnail.nsfw { background-position: -0px -1292px !important; }
 
-/* Special Blizzard Employee posts */
-#siteTable .thing.linkflair-bluepost {
-  background: url('../images/thread-background-transparent.png') repeat-x #022642 !important;
-  color: #00B4FF !important;
-}
-
-#siteTable .thing.linkflair-bluepost .title {
-  color: #00B4FF !important;
-}
-
-#siteTable .thing.linkflair-bluepost .domain, #siteTable .thing.linkflair-bluepost .domain a, #siteTable .thing.linkflair-bluepost .tagline { color: #888877; }
-
-#siteTable .thing.linkflair-bluepost .entry .buttons li a { color: #888877; font-weight: bold; }
