--- a/css/threads.css
+++ b/css/threads.css
@@ -12,7 +12,7 @@
   padding: 4px 0 5px;
   margin: 0 10px 0 5px;
   position:relative;
-  z-index:1;
+  z-index:auto;
 }
 
 
